styles.css
/* css styles */

/* Portion of title on blog post listings table */
div.quarto-post .body {
    flex-basis: 86%;
    flex-grow: 1;
    flex-shrink: 0;
}

/* Set max-width for top navivation bar to prevent having too much space */
#quarto-header {
    position: absolute;
    max-width: 900px;
    margin: auto;
}

/* Keep body elements centered */
body {
    max-width: 1000px;
    margin: auto
}

/* For organized link buttons on about page; overide breakpoint 992px -> 576px */
div.quarto-about-jolla main {
    text-align: center
}

@media(min-width: 576px) {
    div.quarto-about-jolla .about-links {
        flex-direction: row !important;
        column-gap: .8em !important;
        row-gap: 15px !important;
        flex-wrap: wrap !important;
        width: auto;
        padding-bottom: 0
    }
}

@media(max-width: 575.98px) {
    div.quarto-about-jolla .about-links {
        flex-direction: column !important;
        row-gap: 1em !important;
        width: 100% !important;
        padding-bottom: 1.5em !important
    }
}

@media(min-width: 576px) {
    div.quarto-about-jolla .about-link {
        font-size: .8em !important;
        padding: .25em .5em !important;
        border-radius: 4px !important
    }
}

@media(max-width: 575.98px) {
    div.quarto-about-jolla .about-link {
        font-size: 1.1em !important;
        padding: .5em .5em !important;
        text-align: center !important;
        border-radius: 6px !important
    }
}

